# learngit

./: build.gradle  config.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: key.cpp  tt.cpp
app/src/main/java/com/example/demo/: App.java  AppHelper.java  BindEventBus.java  Child.java  CoordActivity.java  DemoService.java  EventBusUtil.java  FixAppBarLayoutBehavior.java  Foo.java  FullyGridLayoutManager.java  MainActivity.java  NUtils.java  PictureActivity.java  TestJava.java  TestService.java  TitleFragment.java  User.java  VpActivity.java
app/src/main/java/com/example/demo/activitys/: CalendarDemoActivity.java  ConstrainsActivity.java  RxActivity.java  SocketActivity.java
app/src/main/java/com/example/demo/adapter/: BaseAdapter.java  BaseViewHolder.java  GridImageAdapter.java
app/src/main/java/com/example/demo/aopdemo/: AopDemoActivity.java  DemoAspect.java  SecurityCheckAnnoation.java
app/src/main/java/com/example/demo/audio_video/: MediaPlayerActivity.java  (+2 more)
app/src/main/res/anim/: fade_out.xml
app/src/main/res/drawable/: cusprogressbarcolor.xml  shape_corner_16_solid_gray.xml
app/src/main/res/layout/: activity_aop_demo.xml  activity_calendar_demo.xml  activity_constrains.xml  activity_coord.xml  activity_main.xml  activity_media_player_demo.xml  activity_picture.xml  activity_rx.xml  activity_socket.xml  activity_vp.xml  fragment_title.xml  layout_item.xml  widget_loading.xml
app/src/main/res/values/: colors.xml  styles.xml
app/src/main/res/values-night/: colors.xml
(+27 files in other folders)
